--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="card-header msg_head">
                     <div class="d-flex justify-content-center bd-highlight">
                         <div class="img_cont">
-                            <img src="src/img/logo.png" class="rounded-circle user_img">
+                            <img src="src/img/Logo.png" class="rounded-circle user_img">
                         </div>
                     </div>
                     <div class="d-flex justify-content-center bd-highlight">
