--- a/chat-body.html
+++ b/chat-body.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Live Chat</title>
@@ -14,15 +14,39 @@
     <script src="src/js/stack-patch.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.js"></script>
 </head>
 
 <body>
-    <div id="body" class="container-fluid">
+    <div id="loader" style="width:100%;height: 100%;z-index: 10;" class="w3-white">
+        <div class="row">
+            <div class="col-md-12">
+                <div style="margin-top:200px" class="loader">
+                    <div class="loader-inner">
+                        <div class="loading one"></div>
+                    </div>
+                    <div class="loader-inner">
+                        <div class="loading two"></div>
+                    </div>
+                    <div class="loader-inner">
+                        <div class="loading three"></div>
+                    </div>
+                    <div class="loader-inner">
+                        <div class="loading four"></div>
+                    </div>
+                </div>
+                <h5 class="text-center">Loading, please wait ....</h5>
+            </div>
+        </div>
+    </div>
+    <div style="display:none" id="body" class="container-fluid">
         <nav class="fixed-top shadow d-flex justify-content-between navbar navbar-light bg-dark">
             <img style="width:60px" class="rounded-circle" src="src/img/Logo.png" alt="">
             <div>
-                <div class="d-inline p-2 text-white"><i class="fa fa-cog"></i></div>
-                <button id="logout" class="btn"><div class="d-inline p-2 text-white"><i class="fa fa-power-off"></i></div></button>
+                <button id="logout" class="btn w3-hover-red"><div class="d-inline p-2 text-white"><i class="fa fa-power-off"></i></div></button>
             </div>
         </nav>
         <div class="container">
@@ -42,14 +66,17 @@
                 </div>
                 <div id="chatBody" class="card-body msg_card_body">
                 </div>
-                <div class="card-footer">
-                    <div class="input-group">
-                        <div class="input-group-append">
-                            <span class="input-group-text attach_btn"><i class="fa fa-paperclip"></i></span>
-                        </div>
-                        <textarea id="message" name="" class="form-control type_msg" placeholder="Type your message..."></textarea>
-                        <div id="sendBtn" class="input-group-append">
-                            <span class="input-group-text send_btn px-4"><i class="fa fa-location-arrow w3-xxlarge"></i></span>
+                <div class="card-footer mr-3">
+                    <div class="container-fluid">
+                        <div class="w3-row">
+                            <div class="w3-col s11">
+                                <textarea class="rounded" placeholder="Type your message..." id="message"></textarea>
+                            </div>
+                            <div class="w3-col s1">
+                                <div id="sendBtn" class="btn btn-success px-3 ml-e">
+                                    <span><i class="fa fa-location-arrow w3-xxlarge"></i></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -60,6 +87,17 @@
 <script src="src/js/browserMqtt.js"></script>
 <script src="src/js/index.js"></script>
 <script>
+    $(document).ready(function() {
+        setTimeout(function() {
+            $('#loader').css('display', 'none')
+            $('#body').css('display', 'block')
+        }, 3000);
+
+        $("#message").emojioneArea({
+            pickerPosition: 'top'
+        });
+    })
+</script>
 </script>
 
 </html>
