--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
                                 <p>Choose Avatar</p>
                                 <div style="width:100%;height:100%" class="mySlides ml-3">
                                     <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/1.jpg" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/2.png" alt=""></button></div>
                                     <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/3.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/5.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/7.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/2.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/2.png" alt=""></button></div>
-                                </div>
-                                <div style="width:100%;height:100%" class="mySlides ml-3">
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/2.png" alt=""></button></div>
                                     <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/4.png" alt=""></button></div>
                                     <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/5.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/1.jpg" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/6.png" alt=""></button></div>
                                     <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/6.png" alt=""></button></div>
                                 </div>
                                 <div style="width:100%;height:100%" class="mySlides ml-3">
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/3.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/6.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/7.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/2.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/5.png" alt=""></button></div>
-                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/5.png" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/anime1.jpg" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/anime2.png" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/anime3.png" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/anime4.png" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/anime5.jpg" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/anime6.png" alt=""></button></div>
+                                </div>
+                                <div style="width:100%;height:100%" class="mySlides ml-3">
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/emoji1.png" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/emoji2.jpg" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/emoji3.jpg" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/emoji4.jpg" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/emoji5.jpg" alt=""></button></div>
+                                    <div class="d-inline"><button class="btn avatar-img"><img class = "rounded-circle" img style="width:50px;height:50px" src="src/img/emoji6.jpg" alt=""></button></div>
                                 </div>
                                 <div class="d-flex justify-content-center">
                                     <button class="w3-button w3-black px-4 mr-1" onclick="plusDivs(-1)">&#10094;</button>
