--- a/chat-body.html
+++ b/chat-body.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Live Chat</title>
+    <title>STRAT LIVE</title>
+    <link rel="icon" href="src/img/Logo.png">
     <link rel="stylesheet" href="src/css/bootstrap.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/w3-css.css">
