--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-sm mt-5">
                     <div class="container text-center text-white w3-display-middle">
                         <h1 class="mt-5" style="font-size:70px">STRAT LIVE</h1>
-                        <p style="font-size:20px">Be connected and broke the boundaries</p>
+                        <p style="font-size:20px">Be connected and break the boundaries</p>
                     </div>
                 </div>
                 <div class="col-sm">
